--- a/AngularHomeworkDay3/src/app/updateuser/updateuser.component.html
+++ b/AngularHomeworkDay3/src/app/updateuser/updateuser.component.html
@@ -30,6 +30,6 @@
     
     <br>
 
-    <button (click)="update()"  [disabled]="updateForm.invalid">Update</button>
+    <button (click)="update()">Update</button>
 
 </form>
